--- a/march_madness.ipynb
+++ b/march_madness.ipynb
@@ -19,6 +19,39 @@
     "import pandas\n",
     "print(\"Hello World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "teams_data = pandas.read_csv(\"kaggle_data/Teams.csv\")\n",
+    "reg_season_detail = pandas.read_csv(\"kaggle_data/RegularSeasonDetailedResults.csv\")\n",
+    "seasons_data = pandas.read_csv(\"kaggle_data/Seasons.csv\")\n",
+    "tourney_compact = pandas.read_csv(\"kaggle_data/TourneyCompactResults.csv\")\n",
+    "tourney_detail = pandas.read_csv(\"kaggle_data/TourneyDetailedResults.csv\")\n",
+    "tourney_seeds = pandas.read_csv(\"kaggle_data/TourneySeeds.csv\")\n",
+    "tourney_slots = pandas.read_csv(\"kaggle_data/TourneySlots.csv\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "teams_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
