variable name fixing

--- a/march_madness.ipynb
+++ b/march_madness.ipynb
@@ -2,31 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "import pandas as pd\n",
     "import math\n",
     "import collections\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "teams_data = pandas.read_csv(\"kaggle_data/Teams.csv\")\n",
+    "teamList = teams_data['Team_Name'].tolist()\n",
     "reg_season_detail = pandas.read_csv(\"kaggle_data/RegularSeasonDetailedResults.csv\")\n",
+    "reg_season_compact_pd = pd.read_csv('kaggle_data/RegularSeasonCompactResults.csv')\n",
     "seasons_data = pandas.read_csv(\"kaggle_data/Seasons.csv\")\n",
     "tourney_compact = pandas.read_csv(\"kaggle_data/TourneyCompactResults.csv\")\n",
     "tourney_detail = pandas.read_csv(\"kaggle_data/TourneyDetailedResults.csv\")\n",
-    "tourney_seeds = pandas.read_csv(\"kaggle_data/TourneySeeds.csv\")\n",
+    "tourney_seeds_pd = pandas.read_csv(\"kaggle_data/TourneySeeds.csv\")\n",
     "tourney_slots = pandas.read_csv(\"kaggle_data/TourneySlots.csv\")\n",
     "conference_pd = pd.read_csv('Conference.csv')\n",
     "tourney_results_pd = pd.read_csv('TourneyResults.csv')\n",
@@ -43,9 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
     "listBigEastteams = ['Butler','Creighton','DePaul','Georgetown','Marquette','Providence','Seton Hall','St John\\'s','Villanova','Xavier']\n",
     "\n",
     "def checkPower6Conference(team_id):\n",
-    "    teamName = teams_pd.values[team_id-1101][1]\n",
+    "    teamName = teams_data.values[team_id-1101][1]\n",
     "    if (teamName in listACCteams or teamName in listBig10teams or teamName in listBig12teams\n",
     "       or teamName in listSECteams or teamName in listPac12teams or teamName in listBigEastteams):\n",
     "        return 1\n",
@@ -172,10 +174,10 @@
     "    return df\n",
     "\n",
     "def getTeamID(name):\n",
-    "    return teams_pd[teams_pd['Team_Name'] == name].values[0][0]\n",
+    "    return teams_data[teams_data['Team_Name'] == name].values[0][0]\n",
     "\n",
     "def getTeamName(team_id):\n",
-    "    return teams_pd[teams_pd['Team_Id'] == team_id].values[0][1]\n",
+    "    return teams_data[teams_data['Team_Id'] == team_id].values[0][1]\n",
     "\n",
     "def getNumChampionships(team_id):\n",
     "    name = getTeamName(team_id)\n",
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +352,7 @@
     "def createSeasonDict(year):\n",
     "    seasonDictionary = collections.defaultdict(list)\n",
     "    for team in teamList:\n",
-    "        team_id = teams_pd[teams_pd['Team_Name'] == team].values[0][0]\n",
+    "        team_id = teams_data[teams_data['Team_Name'] == team].values[0][0]\n",
     "        team_vector = getSeasonData(team_id, year)\n",
     "        \n",
     "        vector_headers = [\"num_wins\", \"avg_points_scored\", \"avg_points_allowed\", \"power6\", \"avg3s_made\", \"avg_assists\",\n",
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +405,7 @@
        "Name: 1211, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
