remove power6 stat from vector

--- a/march_madness.ipynb
+++ b/march_madness.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -360,13 +360,15 @@
     "                         \"sos\", \"srs\", \"avg_rebounds\", \"avg_steals\", \"num_tourney_appearances\", \"num_championships\"]\n",
     "        seasonDictionary[team_id] = dict(zip(vector_headers, team_vector))\n",
     "        \n",
+    "        del seasonDictionary[team_id][\"power6\"] #we dont' think this is useful\n",
+    "        \n",
     "        #seasonDictionary[team_id] = team_vector\n",
     "    return seasonDictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
