--- a/march_madness.ipynb
+++ b/march_madness.ipynb
@@ -675,16 +675,17 @@
    },
    "outputs": [],
    "source": [
-    "Submission.head()"
+    "Submission.head()\n",
+    "print(\"Hello from Aaron\")"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:csc322622]",
+   "display_name": "Python [conda env:csc322]",
    "language": "python",
-   "name": "conda-env-csc322622-py"
+   "name": "conda-env-csc322-py"
   },
   "language_info": {
    "codemirror_mode": {
