created training and test df

--- a/march_madness.ipynb
+++ b/march_madness.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -590,13 +590,13 @@
     "# How do we have a measure of which team won? - like what is the \"Y\" for this?\n",
     "# Maybe add season aggregated data to the previous model\n",
     "\n",
-    "season_matches_season_stats_pd =  pd.DataFrame(data=None, index=range(0, tourney_detail.shape[0]), \n",
-    "            columns=['A_team', 'A_avg3s_made', 'A_avg_assists', 'A_avg_points_allowed', \n",
+    "season_matches_season_stats_pd =  pd.DataFrame(data=None, \n",
+    "            columns=['A_avg3s_made', 'A_avg_assists', 'A_avg_points_allowed', \n",
     "                     'A_avg_points_scored', 'A_avg_rebounds', 'A_avg_steals', 'A_avg_turnovers', \n",
     "                     'A_conference_chap_this_year', 'A_conference_tourney_champ_this_year', \n",
     "                     'A_num_championships', 'A_num_tourney_appearances', 'A_num_wins', 'A_sos',\n",
     "                     'A_srs', 'A_tournament_seed',\n",
-    "                     'B_team', 'B_avg3s_made', 'B_avg_assists', 'B_avg_points_allowed', \n",
+    "                     'B_avg3s_made', 'B_avg_assists', 'B_avg_points_allowed', \n",
     "                     'B_avg_points_scored', 'B_avg_rebounds', 'B_avg_steals', 'B_avg_turnovers', \n",
     "                     'B_conference_chap_this_year', 'B_conference_tourney_champ_this_year', \n",
     "                     'B_num_championships', 'B_num_tourney_appearances', 'B_num_wins', 'B_sos',\n",
@@ -622,7 +622,7 @@
     "                     'B_srs', 'B_tournament_seed']\n",
     "\n",
     "a_headers_mapping = dict(zip(season_stats_headers, a_season_Headers))\n",
-    "b_headers_mapping = dict(zip(season_stats_headers, a_season_Headers))\n",
+    "b_headers_mapping = dict(zip(season_stats_headers, b_season_Headers))\n",
     "\n",
     "reg_season_game_outcomes = pd.DataFrame.copy(reg_season_detail)\n",
     "reg_season_game_outcomes = reg_season_game_outcomes.drop(['Wscore', 'Daynum','Lscore','Wloc',\n",
@@ -636,48 +636,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['avg3s_made', 'avg_assists', 'avg_points_allowed', 'avg_points_scored',\n",
-      "       'avg_rebounds', 'avg_steals', 'avg_turnovers',\n",
-      "       'conference_chap_this_year', 'conference_tourney_champ_this_year',\n",
-      "       'num_championships', 'num_tourney_appearances', 'num_wins', 'sos',\n",
-      "       'srs', 'tournament_seed', 'A_team'],\n",
-      "      dtype='object')\n"
+      "       Wteam  Lteam\n",
+      "76631   1276   1458\n",
+      "76632   1343   1463\n",
+      "76633   1348   1433\n",
+      "76634   1374   1153\n",
+      "76635   1407   1402\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfor index, row in reg_season_game_outcomes.iterrows():\\n    w_team_season_stats = df_2017_results[row[\"Wteam\"]]\\n    l_team_season_stats = df_2017_results[row[\"Lteam\"]]\\n'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#print(reg_season_game_outcomes.columns)\n",
+    "import numpy as np\n",
+    "\n",
+    "print(reg_season_game_outcomes.tail())\n",
+    "#71241, 76635\n",
+    "#print(b_headers_mapping)\n",
     "\n",
     "df_2017_results[1211]\n",
     "w_team_season_stats = df_2017_results[1211]\n",
-    "print(w_team_season_stats.index)\n",
+    "#print(w_team_season_stats.index)\n",
+    " \n",
+    "all_headers = list(a_headers_mapping.values()) + list(b_headers_mapping.values()) + [\"A_win_flag\"]\n",
+    "#print(all_headers)\n",
+    "season_training = pd.DataFrame(columns=all_headers)\n",
+    "\n",
+    "#print(reg_season_game_outcomes)    \n",
     "\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
     "for index, row in reg_season_game_outcomes.iterrows():\n",
     "    w_team_season_stats = df_2017_results[row[\"Wteam\"]]\n",
     "    l_team_season_stats = df_2017_results[row[\"Lteam\"]]\n",
-    "\"\"\" \n",
+    "    \n",
+    "    #print(w_team_season_stats)\n",
+    "    \n",
+    "    if(np.random.randint(2)):\n",
+    "        # Winning Team :: A\n",
+    "        A_win_flag = 1\n",
+    "        A_team_season_stats = w_team_season_stats.rename(a_headers_mapping)\n",
+    "        #A_team_season_stats.set_value(\"A_team\", row[\"Wteam\"])\n",
+    "        B_team_season_stats = l_team_season_stats.rename(b_headers_mapping)\n",
+    "        #B_team_season_stats.set_value(\"B_team\", row[\"Lteam\"])\n",
+    "\n",
+    "    else:\n",
+    "        # Winning Team :: B\n",
+    "        A_win_flag = 0\n",
+    "        A_team_season_stats = l_team_season_stats.rename(a_headers_mapping)\n",
+    "        #A_team_season_stats.set_value(\"A_team\", row[\"Lteam\"])\n",
+    "        B_team_season_stats = w_team_season_stats.rename(b_headers_mapping)\n",
+    "        #B_team_season_stats.set_value(\"B_team\", row[\"Wteam\"])\n",
+    "\n",
+    "        \n",
+    "    matchup = A_team_season_stats.append(B_team_season_stats)\n",
+    "    matchup = matchup.set_value(\"A_win\", A_win_flag)\n",
+    "    season_matches_season_stats_pd.loc[index]= matchup\n",
+    "\n",
+    "print(season_matches_season_stats_pd)\n",
+    "    \n",
+    "    #print(l_team_season_stats)\n",
     "    # print(df_2016_results[row[\"Wteam\"]]\n",
     "    # a_team, b_team, season_stats for a_team, season_stats b_team, a_win\n",
     "    # a_team from reg_season_game_outcomes\n",
@@ -686,6 +711,51 @@
     "#randomly make Wteam A or B\n",
     "#create A_win var appropriately\n",
     "# new row in df comprised of TeamA Team B TeamA_stats TeamB_stats A_win"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Create Testing Data\n",
+    "Submission[\"Team1\"]\n",
+    "\n",
+    "tourney_matchups_season_stats_pd =  pd.DataFrame(data=None, \n",
+    "            columns=['A_avg3s_made', 'A_avg_assists', 'A_avg_points_allowed', \n",
+    "                     'A_avg_points_scored', 'A_avg_rebounds', 'A_avg_steals', 'A_avg_turnovers', \n",
+    "                     'A_conference_chap_this_year', 'A_conference_tourney_champ_this_year', \n",
+    "                     'A_num_championships', 'A_num_tourney_appearances', 'A_num_wins', 'A_sos',\n",
+    "                     'A_srs', 'A_tournament_seed',\n",
+    "                     'B_avg3s_made', 'B_avg_assists', 'B_avg_points_allowed', \n",
+    "                     'B_avg_points_scored', 'B_avg_rebounds', 'B_avg_steals', 'B_avg_turnovers', \n",
+    "                     'B_conference_chap_this_year', 'B_conference_tourney_champ_this_year', \n",
+    "                     'B_num_championships', 'B_num_tourney_appearances', 'B_num_wins', 'B_sos',\n",
+    "                     'B_srs', 'B_tournament_seed',\n",
+    "                     'A_win'], dtype=None, copy=False)\n",
+    "\n",
+    "for index, row in Submission.iterrows():\n",
+    "    team_season_stats_1 = df_2017_results[int(row[\"Team1\"])]\n",
+    "    team_season_stats_2 = df_2017_results[int(row[\"Team2\"])]\n",
+    "    \n",
+    "    if(np.random.randint(2)):\n",
+    "        # Team1 :: A\n",
+    "        A_team_season_stats = team_season_stats_1.rename(a_headers_mapping)\n",
+    "        B_team_season_stats = team_season_stats_2.rename(b_headers_mapping)\n",
+    "\n",
+    "    else:\n",
+    "        # Team1 :: B\n",
+    "        A_team_season_stats = team_season_stats_2.rename(a_headers_mapping)\n",
+    "        B_team_season_stats = team_season_stats_1.rename(b_headers_mapping)\n",
+    "\n",
+    "        \n",
+    "    matchup = A_team_season_stats.append(B_team_season_stats)\n",
+    "    tourney_matchups_season_stats_pd.loc[index]= matchup\n",
+    "    print(tourney_matchups_season_stats_pd)\n",
+    "    break"
    ]
   }
  ],
